# breezy

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  conda.yaml  pyproject.toml  pytest.ini
breezy/: __init__.py  breezy_paths.py  data.py  plotting.py  utilities.py
data/: cbioportal-kras-mutation-frequency.csv  gtex-expression.csv  human-protein-atlas-expression.csv  human-protein-atlas-metadata.json
data-raw/cbioportal/: cbioportal-data_tcga-KRAS-mutations.txt
data-raw/human-protein-atlas/: kras.tsv
data-raw/tabula-muris/: TabulaMuris_KrasExpression_CellMean.csv
figures/: 001_001_kras-mut-expr.ipynb  002_001_kras-mut-freq.ipynb  _template.ipynb
munge/: 010_020_gtex-data-collection.py  010_025_human-protein-atlas.py  010_030_cbioportal-kras-mutations-tcga.py  010_035_tabula-muris.py
notebooks/: 010_010_eda.ipynb  010_010_eda.md  _template.ipynb
