[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "breezy"
authors = [{name = "Joshua Cook", email = "jhcook@g.harvard.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/Kevin-Haigis-Lab/breezy.git"
